--- a/AP_levelEditor/css/style.css
+++ b/AP_levelEditor/css/style.css
@@ -120,7 +120,6 @@ nav ul li.logo a{
   width: 80px;
   height: 80px;
   margin: 0;
-  z-index: 2;
 }
 @keyframes bee-fly {
   0%  {background-image:  url("../img/bee.png");}
@@ -269,4 +268,30 @@ nav ul li.logo a{
 
 hr {
   color: #dedede;
+}
+
+/* Modal to play the game */
+#modalPlayer {
+  display: none;
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Sit on top */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgb(0,0,0); /* Fallback color */
+  background-color: rgba(0,0,0,0.7); /* Black w/ opacity */
+}
+
+.play-modal {
+  /*background-color: #fefefe;*/
+  margin: 4% auto; /* 15% from the top and centered */
+  padding: 5px;
+  /*border: 1px solid #888;*/
+  width: 1024px; /* Could be more or less, depending on screen size */
+}
+
+#canvas {
+  border: 2px solid #000;
 }
